<resources>
    <string name="app_name">BookDatabase</string>
    <string name="action_settings">Settings</string>
    <string name="addNewBook">Add New Book</string>
    <string name="book_image_content_description">Book Image</string>
    <string name="book_name_label">Book Name</string>
    <string name="content_image">Image</string>
    <string name="author_label_name">Author</string>
    <string name="save_button_name">Save</string>
    <string name="cancel_button_name">Cancel</string>
    <string name="Read_label_name">Read</string>
    <string name="Comment_placeholder">Add a comment...</string>
    <string name="get_back_label">Get Back</string>
    <string name="edit_label">Edit</string>
    <string name="label_content_detail">This book doesn\'t contain any comment...</string>
    <string name="checkbox_label_read">This book is read</string>
    <string name="checkbox_label_not_read">This book is not read yet</string>
</resources>
