<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollBar_edit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rating_counter_edit"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".EditActivityEditActivity">

        <ImageView
            android:id="@+id/imageView_edit"
            android:background="@drawable/edittext_border"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/content_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/image_book_unknown_foreground" />

        <EditText
            android:id="@+id/label_book_name_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:hint="@string/book_name_label"
            android:inputType="textPersonName"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageView_edit"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/authorName_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:hint="@string/author_label_name"
            android:inputType="textPersonName"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageView_edit"
            app:layout_constraintTop_toBottomOf="@+id/label_book_name_edit" />

        <CheckBox
            android:id="@+id/checkBox_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/Read_label_name"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/imageView_edit"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView_edit" />

        <EditText
            android:id="@+id/content_edit"
            android:layout_width="0dp"
            android:layout_height="259dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/edittext_border"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/Comment_placeholder"
            android:inputType="textMultiLine"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox_edit" />

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:text="@string/cancel_button_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/content_edit" />

        <Button
            android:id="@+id/button_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:background="@color/colorPrimary"
            android:text="@string/save_button_name"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_cancel" />

        <RatingBar
            android:id="@+id/ratingBar_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView_edit"
            app:layout_constraintTop_toBottomOf="@+id/authorName_edit" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>